objects/Solution.object
<CustomObject>
    <businessProcesses>
        <fullName>SunPower RLC Solution Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending SME Approval</fullName>
        </values>
        <values>
            <fullName>Pending SSC Approval</fullName>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
        <values>
            <fullName>Revised</fullName>
        </values>
        <values>
            <fullName>Updated</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>APAC_Specific__c</fullName>
        <label>APAC Specific</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AU_Specific__c</fullName>
        <label>AU Specific</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EU_Specific__c</fullName>
        <label>EU Specific</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAQ__c</fullName>
        <label>FAQ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <label>Integration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Content__c</fullName>
        <inlineHelpText>Content in this field will not be visible to Customers, Partners or Other External audiences.</inlineHelpText>
        <label>INTERNAL CONTENT</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NA_Specific__c</fullName>
        <label>NA Specific</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
    </listViews>
    <validationRules>
        <fullName>Edit_Is_Not_Allowed</fullName>
        <active>false</active>
        <description>Edit is not allow for non-solution editors</description>
        <errorConditionFormula>$User.ByPassValidation__c = False
&amp;&amp;
( ISPICKVAL( $User.Solutions_Editor__c, &quot;No&quot;)  || ISPICKVAL( $User.Solutions_Editor__c, &quot;&quot;)
&amp;&amp;
NOT(ISPICKVAL( Status, &quot;Draft&quot;) &amp;&amp; NOT(ISPICKVAL( Status, &quot;&quot;)
&amp;&amp;
 (Ischanged ( SolutionName  )  ||    Ischanged ( SolutionNote  ) || Ischanged ( Internal_Content__c  )))))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Only members of the Solutions Steering Committee can update a solution not in Draft Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solutions_Status_Cannot_Be_Updated</fullName>
        <active>false</active>
        <description>Solutions Status Cannot Be Updated from Null/Draft by non- Solutions Committee Members</description>
        <errorConditionFormula>$User.ByPassValidation__c = False
&amp;&amp;
ISCHANGED(Status)
&amp;&amp;
( ISPICKVAL( $User.Solutions_Editor__c, &quot;No&quot;)  || ISPICKVAL( $User.Solutions_Editor__c, &quot;&quot;)
&amp;&amp;
(ISPICKVAL(PRIORVALUE (Status), &quot;&quot;)  ||  
ISPICKVAL(PRIORVALUE (Status), &quot;Reviewed&quot;)  ||  
ISPICKVAL(PRIORVALUE (Status), &quot;Revised&quot;)  ||  
ISPICKVAL(PRIORVALUE (Status), &quot;Updated&quot;)  ||  
ISPICKVAL(PRIORVALUE (Status), &quot;Pending SME Approval&quot;)  || 
ISPICKVAL(PRIORVALUE (Status), &quot;Pending SSC Approval&quot;)  ||  
ISPICKVAL(PRIORVALUE (Status), &quot;Archived&quot;)))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Only members of the Solutions Steering Committee can update a solution&apos;s status from a Draft Status.</errorMessage>
    </validationRules>
</CustomObject>